Make the root package be gr.skroutz.elasticsearch.word.delimeter
fixup! Make the root package be gr.skroutz.elasticsearch.word_delimeter

fixup! Make the root package be gr.skroutz.elasticsearch.word.delimeter

--- a/src/main/resources/plugin-descriptor.properties
+++ b/src/main/resources/plugin-descriptor.properties
@@ -3,4 +3,4 @@ description=${project.description}
 version=${project.version}
 java.version=${maven.compiler.target}
 elasticsearch.version=${elasticsearch.version}
-classname=org.elasticsearch.plugin.WordDelimiterPlugin
+classname=gr.skroutz.elasticsearch.word.delimeter.plugin.WordDelimiterPlugin
